backend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  name: default-backend
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: default-backend
    spec:
      containers:
      - image: kodekloud/ecommerce:404
        name: simple-webapp
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: kube-system
spec:
  ports:
  - nodePort: 31984
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: default-backend
  type: NodePort
