ingress-resource.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srcmkr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - d3v.to
    secretName: echo-tls
  rules:
  - host: d3v.to
    http:
      paths:
      - path: /j
        backend:
          serviceName: srcmkr-service
          servicePort: 80
